--- a/packages/search/package.json
+++ b/packages/search/package.json
@@ -10,6 +10,7 @@
     "lint": "npm run lint:src && npm run lint:test",
     "lint:src": "./node_modules/.bin/tslint src/**/*.ts",
     "lint:test": "./node_modules/.bin/tslint test/**/*.ts",
+    "start": "sam local invoke -e ./test/data/data.json -t ./infrastructure/template.yaml",
     "sam:build": "npm run build && aws cloudformation package --template-file ./infrastructure/template.yaml --s3-bucket $CFT_BUCKET --s3-prefix $STACK_NAME/$(basename $(pwd)) --output-template-file ./infrastructure/template.package.yaml",
     "test": "npm run test:unit",
     "test:unit": "./node_modules/.bin/nyc ./node_modules/.bin/mocha -R spec --watch-extensions spec.ts,ts -r ts-node/register -r tsconfig-paths/register -r source-map-support/register $(pwd)/test/unit/**/*.spec.ts --recursive"
@@ -21,23 +22,20 @@
     "typescript": "^3.7.5",
     "@types/aws-lambda": "^8.10.46",
     "@types/aws-sdk": "^2.7.0",
-    "@types/chai": "^4.2.4",
-    "@types/mocha": "^5.2.7",
-    "@types/sinon": "^7.5.0",
     "aws-sdk-mock": "^4.5.0",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
-    "mocha": "^6.2.2",
-    "nyc": "^14.1.1",
-    "sinon": "^7.5.0",
     "ts-node": "^8.4.1",
     "tsconfig-paths": "^3.9.0",
     "tslint": "^5.20.0",
     "typemoq": "^2.1.0"
   },
   "dependencies": {
-    "@DillonSykes/lambda-event": "^1.0.0",
+    "@types/mocha": "^7.0.2",
+    "@types/spotify-web-api-node": "^4.0.1",
+    "aws-lambda": "^1.0.5",
+    "dotenv": "^8.2.0",
+    "envalid": "^6.0.1",
     "inversify": "^5.0.1",
-    "aws-lambda": "^1.0.5"
+    "reflect-metadata": "^0.1.13",
+    "spotify-web-api-node": "^4.0.0"
   }
 }
